--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,5 +1,6 @@
 .card__description {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr min-content;
   justify-content: space-between;
   align-items: center;
   background: #fff;
