--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -3,6 +3,8 @@
   height: 18px;
   background: transparent url('../../../images/like-inactive.svg') no-repeat;
   
+  grid-row: 1/2; 
+  grid-column: 2/3;
   background-size: 21px 18px;
   border: none;
   cursor: pointer;
