--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,10 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+ background: #FFF;
+ outline: 1px solid #000;
+ color: #000;
+ opacity: 20%;
+}
