--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,6 +10,20 @@
   margin-bottom: 10px;
 }
 
+.popup__input_type_error {
+  border-bottom-color: #FF0000;
+}
+
+.popup__input_error {
+  display: none;
+  color: #FF0000;
+  font-size: 12px;
+}
+
+.popup__input_error_active {
+  display: block;
+}
+
 .popup__input:last-of-type {
   margin-bottom: 0;
 }
